--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -32,3 +32,4 @@ test:
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
   redis_url: <%= ENV['REDISCLOUD_URL'] %>
+  new_relic_key: <%= ENV['NEW_RELIC_KEY'] %>
