--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
   "name": "StarWarsShop",
   "private": true,
-  "engines": {
-    "node": "8.11.1"
-  },
   "dependencies": {
     "@rails/webpacker": "^3.5.5",
     "autoprefixer": "^7.1.2",
@@ -20,17 +17,20 @@
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
+    "fuse.js": "^3.4.2",
     "glob": "^7.1.2",
     "js-yaml": "^3.9.0",
+    "lodash": "^4.17.11",
     "node-sass": "^4.5.3",
     "path-complete-extname": "^0.1.0",
     "postcss-loader": "^2.0.6",
     "postcss-smart-import": "^0.7.5",
     "precss": "^2.0.0",
-    "prop-types": "^15.6.2",
+    "prop-types": "^15.7.2",
     "rails-erb-loader": "^5.0.2",
-    "react": "^16.6.1",
-    "react-dom": "^16.6.1",
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2",
+    "react_ujs": "^2.4.4",
     "resolve-url-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
