--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
+    "standard": "^12.0.1",
     "webpack-dev-server": "^2.7.1"
   }
 }
