--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@rails/webpacker": "^3.5.5",
     "autoprefixer": "^7.1.2",
+    "axios": "^0.18.0",
     "babel-core": "^6.25.0",
     "babel-loader": "7.x",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -19,6 +20,8 @@
     "file-loader": "^0.11.2",
     "fuse.js": "^3.4.2",
     "glob": "^7.1.2",
+    "global": "^4.3.2",
+    "history": "^4.7.2",
     "js-yaml": "^3.9.0",
     "lodash": "^4.17.11",
     "node-sass": "^4.5.3",
@@ -28,8 +31,8 @@
     "precss": "^2.0.0",
     "prop-types": "^15.7.2",
     "rails-erb-loader": "^5.0.2",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "react_ujs": "^2.4.4",
     "resolve-url-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
