--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "StarWarsShop",
+  "name": "star_wars_shop",
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^3.5.5",
@@ -12,6 +12,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "classnames": "^2.2.6",
     "coffee-loader": "^0.7.3",
     "coffee-script": "^1.12.6",
     "compression-webpack-plugin": "^0.4.0",
@@ -42,6 +43,13 @@
     "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
+    "eslint": "^5.14.1",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-standard": "^4.0.0",
     "standard": "^12.0.1",
     "webpack-dev-server": "^2.7.1"
   }
