--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "coffee-script": "^1.12.6",
     "compression-webpack-plugin": "^0.4.0",
     "css-loader": "^0.28.4",
+    "eslint-plugin-react-hooks": "^1.2.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "fuse.js": "^3.4.2",
