--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "star_wars_shop",
   "private": true,
+  "engines": {
+    "node": "8.16.2"
+  },
   "dependencies": {
     "@rails/webpacker": "^3.5.5",
     "autoprefixer": "^7.1.2",
