--- a/config/cable.yml
+++ b/config/cable.yml
@@ -4,7 +4,7 @@ development:
   channel_prefix: 'star_wars_shop_development'
 
 test:
-  adapter: async
+  adapter: test
 
 production:
   adapter: redis
