--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 
 services:
   app:
@@ -9,9 +9,9 @@ services:
         # Update 'VARIANT' to pick a version of Ruby: 3, 3.1, 3.0, 2, 2.7, 2.6
         # Append -bullseye or -buster to pin to an OS version.
         # Use -bullseye variants on local arm64/Apple Silicon.
-        VARIANT: "2.6"
+        VARIANT: "2.7"
         # Optional Node.js version to install
-        NODE_VERSION: "12"
+        NODE_VERSION: "10"
 
     volumes:
       - ..:/workspace:cached
